Magasin fungere som den skal med resten
Magasin fungere som den skal med resten

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,5 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "XRD1-VR.sln"
+    "dotnet.defaultSolution": "xrd-vr.sln"
 }
